# PCSC_Data_Approximation

./: Approximator.cpp  Approximator.hpp  CMakeLists.txt  Data.cpp  Data.hpp  Matrix.cpp  Matrix.hpp  README.md  UserInterface.cpp  UserInterface.hpp  main.cpp
doc/: Doxyfile
doc/html/: _approximator_8cpp.html  _approximator_8cpp__incl.dot  _approximator_8cpp__incl.md5  _approximator_8hpp.html  _approximator_8hpp__dep__incl.dot  _approximator_8hpp__dep__incl.md5  _approximator_8hpp__incl.dot  _approximator_8hpp__incl.md5  _approximator_8hpp_source.html  _data_8cpp.html  _data_8cpp__incl.dot  _data_8cpp__incl.md5  _data_8hpp.html  _data_8hpp__dep__incl.dot  _data_8hpp__dep__incl.md5  _data_8hpp__incl.dot  _data_8hpp__incl.md5  _data_8hpp_source.html  _matrix_8cpp.html  _matrix_8cpp__incl.dot  _matrix_8cpp__incl.md5  _matrix_8hpp.html  _matrix_8hpp__dep__incl.dot  _matrix_8hpp__dep__incl.md5  _matrix_8hpp__incl.dot  _matrix_8hpp__incl.md5  _matrix_8hpp_source.html  _user_interface_8cpp.html  _user_interface_8cpp__incl.dot  _user_interface_8cpp__incl.md5  _user_interface_8hpp.html  _user_interface_8hpp__dep__incl.dot  _user_interface_8hpp__dep__incl.md5  _user_interface_8hpp_source.html  annotated.html  class_approximator-members.html  class_approximator.html  class_data-members.html  class_data.html  class_matrix-members.html  (+12 more)
src/: Approximator.cpp  Approximator.hpp  Data.hpp  Matrix.cpp  Matrix.hpp  UserInterface.cpp  UserInterface.hpp
test/: GeneralTest.cpp  GeneralTest.hpp  Test_1.cpp  Test_1.hpp  Test_2.cpp  Test_2.hpp  Test_3.cpp  Test_3.hpp  Test_4.cpp  Test_4.hpp
(+25 files in other folders)
